--- a/06 - Auth App.env
+++ b/06 - Auth App.env
@@ -1,3 +1,3 @@
-PORT = 4000
-DATABASE_URL = mongodb+srv://priyansh70890:78C15DcDLqe33Ovw@cluster0.aoivo6x.mongodb.net/AuthApp
-JWT_SECRET = priyansh
+PORT = 
+DATABASE_URL = 
+JWT_SECRET = 
